@@ -133,28 +133,23 @@ public class TestData implements Runnable {
                 // native libs installed
                 if (mediaLib) {
                     final Class mImage = mediaLibImage;
-                    mediaLib =
-                            AccessController.doPrivileged(
-                                    (PrivilegedAction<Boolean>)
-                                            () -> {
-                                                try {
-                                                    // get the method
-                                                    final Class[] params = {};
-                                                    Method method =
-                                                            mImage.getDeclaredMethod(
-                                                                    "isAvailable", params);
+                    PrivilegedAction<Boolean> action =
+                            () -> {
+                                try {
+                                    // get the method
+                                    final Class[] params = {};
+                                    Method method = mImage.getDeclaredMethod("isAvailable", params);
 
-                                                    // invoke
-                                                    final Object[] paramsObj = {};
+                                    // invoke
+                                    final Object[] paramsObj = {};
 
-                                                    final Object o =
-                                                            mImage.getDeclaredConstructor()
-                                                                    .newInstance();
-                                                    return (Boolean) method.invoke(o, paramsObj);
-                                                } catch (Throwable e) {
-                                                    return false;
-                                                }
-                                            });
+                                    final Object o = mImage.getDeclaredConstructor().newInstance();
+                                    return (Boolean) method.invoke(o, paramsObj);
+                                } catch (Throwable e) {
+                                    return false;
+                                }
+                            };
+                    mediaLib = AccessController.doPrivileged(action);
                 }
             } catch (Throwable e) {
                 // Because the property com.sun.media.jai.disableMediaLib isn't
@@ -415,6 +410,11 @@ public class TestData implements Runnable {
             throws FileNotFoundException, IOException {
         final File file = file(caller, name);
         final File parent = file.getParentFile().getAbsoluteFile();
+        unzip(file, parent);
+    }
+
+    /** Unzips the give source file in the target directory */
+    public static void unzip(File file, File target) throws IOException {
         try (final ZipFile zipFile = new ZipFile(file)) {
             final Enumeration entries = zipFile.entries();
             final byte[] buffer = new byte[4096];
@@ -423,7 +423,7 @@ public class TestData implements Runnable {
                 if (entry.isDirectory()) {
                     continue;
                 }
-                final File path = new File(parent, entry.getName());
+                final File path = new File(target, entry.getName());
                 if (path.exists()) {
                     continue;
                 }
